--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+    .avatar {
+        margin: 5;
+        background-color: "#E55F16";
+        color: "#050507";
+        width: 60;
+        height: 60
+    }
+    .form {
+        width: "100%";
+        margin-top: 20
+    }
+    .icon {
+        font-size : 40
+    }
+    .paper {
+        margin-top: 8;
+        display: "flex";
+        flex-direction: "column";
+        align-items: "center"
+    }
+    .submit {
+        margin-top: 15;
+    }
